fixed some bugs to deploy the porject on render copied everyting to fixed the bug copied it to the static folder